<resources>
    <string name="app_name">Milki Health science</string>
    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="blog">Blog</string>
    <string name="newsletter">Newsletter</string>
    <string name="contactus">Contact us</string>
    <string name="gallery">Gallery</string>
    <string name="about_us">About us</string>
    <string name="ssl_error_message">There is a problem with the website\'s security certificate. Proceeding may be unsafe. Do you want to continue?</string>
    <string name="proceed">Proceed Anyway</string>
    <string name="cancel">Cancel</string>
</resources>